--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://alasatirrushworth.github.io/"
+base_url = "https://alastairrushworth.github.io/"
 compile_sass = true
 title = "alastair rushworth"
 description = "A blog about data science and other things"
