--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,13 @@ taxonomies = [
 [extra]
 author = "alastair"
 after_dark_menu = [
-    {url = "$BASE_URL", name = "Home"},
+    {url = "$BASE_URL", name = "home"},
+    {url = "$BASE_URL/about", name = "about"},
+    {url = "$BASE_URL/recipes", name = "recipes"}
     {url = "$BASE_URL/categories", name = "Categories"},
     {url = "$BASE_URL/tags", name = "Tags"},
 ]
 after_dark_title = "My blog"
+
+[search]
+index_format = "elasticlunr_javascript"
