--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ taxonomies = [
 [extra]
 author = "alastair"
 after_dark_menu = [
-    {url = "$BASE_URL", name = "home"},
+    {url = "$BASE_URL/posts", name = "home"},
     {url = "$BASE_URL/about", name = "about"},
     {url = "$BASE_URL/recipes", name = "recipes"},
     {url = "$BASE_URL/categories", name = "Categories"},
