--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ after_dark_menu = [
     {url = "$BASE_URL", name = "home"},
     {url = "$BASE_URL/about", name = "about"},
     {url = "$BASE_URL/recipes", name = "recipes"},
-    {url = "$BASE_URL/categories", name = "Categories"},
-    {url = "$BASE_URL/tags", name = "Tags"},
+    {url = "$BASE_URL/categories", name = "categories"},
+    {url = "$BASE_URL/tags", name = "tags"},
 ]
 after_dark_title = "My blog"
 
