--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ generate_feeds = true
 compile_sass = true
 minify_html = true
 taxonomies = [{ name = "tags" }]
+index_format = "elasticlunr_javascript"
 
 [markdown]
 highlight_code = true
