--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ highlight_code = true
 highlight_theme = "ayu-light"
 
 [extra]
-toc = true
+toc = false
 use_cdn = false
 favicon = "/icon/favicon.png"
 theme = "toggle"              # light, dark, auto, toggle
