--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,24 +1,41 @@
-name: Zola
-
+name: Build and deploy GH Pages
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3.0.0
+      - name: build_and_deploy
+        uses: shalzz/zola-deploy-action@v0.17.2
+        env:
+          PAGES_BRANCH: gh-pages
+          TOKEN: ${{ secrets.GHPAT }}
+
+# name: Zola
+
+# on:
+#   push:
+#     branches: [ main ]
+#   workflow_dispatch:
+
+# # Allow one concurrent deployment
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: true
+
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#     - uses: actions/checkout@v3
       
-    - name: Build and deploy
-      uses: shalzz/zola-deploy-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GHPAT}}
+#     - name: Build and deploy
+#       uses: shalzz/zola-deploy-action@master
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GHPAT}}
