--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,41 +1,54 @@
-name: Build and deploy GH Pages
+name: Zola on GitHub Pages
+
 on:
   push:
     branches:
       - main
+  pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main'
     steps:
-      - name: checkout
-        uses: actions/checkout@v3.0.0
-      - name: build_and_deploy
-        uses: shalzz/zola-deploy-action@v0.17.2
+      - name: Checkout main
+        uses: actions/checkout@v4
+      - name: Build only
+        uses: shalzz/zola-deploy-action@v0.19.2
         env:
+          BUILD_DIR: docs
+          BUILD_ONLY: true
+          BUILD_FLAGS: --drafts
+          # A GitHub token is not necessary when BUILD_ONLY is true
+          # GITHUB_TOKEN: ${{ secrets.GHPAT }}
+
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout main
+        uses: actions/checkout@v4
+      - name: Build and deploy
+        uses: shalzz/zola-deploy-action@v0.19.2
+        env:
+          BUILD_DIR: docs
           PAGES_BRANCH: gh-pages
-          TOKEN: ${{ secrets.GHPAT }}
+          GITHUB_TOKEN: ${{ secrets.GHPAT }}
 
 # name: Zola
-
-# on:
+# on: 
 #   push:
-#     branches: [ main ]
-#   workflow_dispatch:
-
-# # Allow one concurrent deployment
-# concurrency:
-#   group: "pages"
-#   cancel-in-progress: true
-
-
+#     branches:
+#     - main
+  
 # jobs:
 #   build:
+#     name: Publish site
 #     runs-on: ubuntu-latest
-    
 #     steps:
-#     - uses: actions/checkout@v3
-      
+#     - name: Checkout main
+#       uses: actions/checkout@v4
 #     - name: Build and deploy
-#       uses: shalzz/zola-deploy-action@master
+#       uses: shalzz/zola-deploy-action@v0.19.2
 #       env:
 #         GITHUB_TOKEN: ${{ secrets.GHPAT}}
