--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/apollo"]
 	path = themes/apollo
 	url = https://github.com/not-matthias/apollo
+[submodule "themes/even"]
+	path = themes/even
+	url = https://github.com/getzola/even.git
