--- a/config.toml
+++ b/config.toml
@@ -1,39 +1,33 @@
 base_url = "https://alastairrushworth.github.io/"
 title = "alastair rushworth"
 description = "a blog about data science and other things"
+theme = "even"
 build_search_index = true
 generate_feeds = true
 compile_sass = true
 minify_html = true
-taxonomies = [{ name = "tags" }]
+taxonomies = [
+    { name = "categories", feed = true },
+    { name = "tags", feed = true },
+]
 
 [markdown]
 highlight_code = true
 highlight_theme = "ayu-light"
 
 [extra]
-toc = false
-use_cdn = false
 favicon = "/icon/favicon.png"
-theme = "toggle"              # light, dark, auto, toggle
-fancy_code = true
-dynamic_note = true           # a note that can be toggled
+author = "Alastair Rushworth"
+even_title = "alastair rushworth"
 mathjax = true
-mathjax_dollar_inline_enable = true
-repo_url = "https://github.com/not-matthias/apollo/tree/main/content"
+katex_enable = true
+katex_auto_render = true
+stylesheets = ["custom.css"]
 
-menu = [
-    { name = "/posts", url = "/posts", weight = 1 },
-    { name = "/about", url = "/about", weight = 3 },
+even_menu = [
+    {url = "$BASE_URL", name = "Home"},
+    {url = "$BASE_URL/categories", name = "Categories"},
+    {url = "$BASE_URL/tags", name = "Tags"},
+    {url = "$BASE_URL/about", name = "About"},
 ]
-
-socials = [
-    { name = "github", url = "https://github.com/alastairrushworth/", icon = "github" },
-]
-
-custom_css = []
-
-[extra.analytics]
-enabled = false
-
 
